# xalorra_platform

./: .gitignore  License  Makefile  README.md  light_backup.sh  secrets.txt
backend/ai-engineer/: cli.py  requirements.txt  setup_ai_engineer.sh
backend/api-engine/: .gitignore  CHANGELOG.md  DOCS.md  License  README.MD  cli.md  main.py  requirements.txt  setup.py  test_ws.py  todo.md
backend/dataset-streamup/: .gitignore  README.md  dataset_setup.sh  main.py  requirements.txt
backend/fastapi-engine/: .gitignore  CHANGELOG.md  Checkpoint Internal — v0.1.0  README.md  ROADMAP.md  et_file_columnmetadata | 2025-07-11 23:03:08.814541+00  init_git.sh  manage.py  misi_terdekat.md  requirements.txt  setup_ml_core.sh  setup_structure.sh  target.md
backend/feedback-engine/: README.md
backend/ml-core/: hasil.csv  predict_sample.csv  pyproject.toml  sample.csv  setup.py
backend/ml-core/examples/saved_models/: model.joblib
backend/ml-core/xalorra_ml_core/: automl.py  cli.py  evaluator.py  io.py  predictor.py  readme.md  trainer.py
backend/pipeline-engine/: Makefile  README.MD  main.py
backend/query_engine/: README.md  main.py  setup.py  test_query.py
frontend/foundation-web/: LICENSE.md  next-intl.config.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
scripts/: backup-stacks-cron.sh  backup-supastarter-daily.sh  clean-cache.sh  cron-backup.txt  full-backup.sh  full_backup.sh  init_api_engine.sh  setup_orchestrator.sh  setup_xalorra_bot.sh  xalorra-docker-volume-scan.sh  xalorra-harden.sh
(+205 files in other folders)
